General code clean-up (#502)
* Use Standard Charset object
* Remove Unnecessary enum modifier
* Make final var
* Avoid String concat loop. Use StringBuilder
* Remove Unnecessary interface modifier
* Simplify Statement
* Inline variable