@@ -19,12 +19,12 @@ package org.apache.logging.log4j.core.config;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -601,13 +601,9 @@ public abstract class ConfigurationFactory extends ConfigurationBuilderFactory {
                 final String[] pairs = configLocations.getQuery().split("&");
                 for (String pair : pairs) {
                     final int idx = pair.indexOf("=");
-                    try {
-                        final String key = idx > 0 ? URLDecoder.decode(pair.substring(0, idx), "UTF-8") : pair;
-                        if (key.equalsIgnoreCase(OVERRIDE_PARAM)) {
-                            locations.add(URLDecoder.decode(pair.substring(idx + 1), "UTF-8"));
-                        }
-                    } catch (UnsupportedEncodingException ex) {
-                        LOGGER.warn("Invalid query parameter in {}", configLocations);
+                    final String key = idx > 0 ? URLDecoder.decode(pair.substring(0, idx), StandardCharsets.UTF_8) : pair;
+                    if (key.equalsIgnoreCase(OVERRIDE_PARAM)) {
+                        locations.add(URLDecoder.decode(pair.substring(idx + 1), StandardCharsets.UTF_8));
                     }
                 }
                 return locations.toArray(new String[0]);
